# Safescoring.io

./: .env.example  .gitignore  ANALYSE_GEMINI_PRO.md  ANALYSE_STRATEGIE_NORMES.md  ANTI_HACK_PROTECTION.md  AUDIT_COMPLETE.md  AUDIT_METHODOLOGIE_VS_IMPLEMENTATION.md  CALCULATEUR_PERSO_SASU.md  CALCULATEUR_SASU_README.md  CHANGELOG.md  CLA.md  CODE_OF_CONDUCT.md  COMMUNITY_VOTING_SYSTEM_COMPLETE.md  COMPONENT_MIGRATIONS_COMPLETE.md  COMPONENT_MIGRATIONS_PROGRESS.md  COMPREHENSIVE_DATA_GUIDE.md  CONFORMITE_FISCALE_FRANCE.md  CONNEXION_AUTOMATIQUE_PAIEMENTS.md  CONTRIBUTING.md  CROWDFUNDING_CAMPAIGN.md  CRYPTO_LEGISLATION_GUIDE.md  CRYPTO_LIVE_RATES_FEATURE.md  CRYPTO_PAYMENTS_SETUP.md  CYBERSECURITY_STRATEGY.md  DEMARRAGE_RAPIDE_GEOGRAPHIE.md  DUAL_PAYMENT_STRATEGY.md  Dockerfile.admin  Dockerfile.cron  Dockerfile.worker  EIP-1559_SUMMARY.md  ENRICHIR_TOUS_PRODUITS.md  EXECUTE_MIGRATION_136.md  EXECUTE_MIGRATION_NOW.md  EXECUTION_GUIDE.md  GUIDE_COMPTABILITE_CRYPTO_SASU.md  GUIDE_GEOGRAPHIE_PRODUITS.md  GUIDE_STRUCTURE_LLC_TNS.md  GUIDE_UTILISATION_CALCULATEUR_SASU.md  ILIKE_INJECTION_FIXES.md  LICENSE  (+87 more)
.github/: dependabot.yml
_archive/: RUN_FULL.bat  RUN_TEST.bat  add_pillar_definitions.py  analyze_and_reclassify.py  analyze_score_problem.py  check_definitions_status.py  deep_scrape_classify.py  fix_hierarchy_and_recalculate.py  migrate_scores_to_table.py  recalculate_all_scores.py  reclassify_balanced.py  regenerate_all_applicability.py  report_scores.py  (+4 more)
sdk/python/: README.md  pyproject.toml
sdk/python/safescoring/: __init__.py  client.py  exceptions.py
(+1915 files in other folders)
